--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,10 @@
 /* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;800;900&display=swap');
 
 /* Variables */
 :root{
     --primary-color: #ff42a5;
-    --secdoery-color: #4ec5f7;
+    --secondary-color: #4ec5f7;
 }
 
 
@@ -15,9 +15,10 @@
     padding: 0;
     font-family: 'Work Sans', sans-serif;
     color: #534c64;
+    font-weight: 500;
 }
 .container{
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 .primary-color{
@@ -25,18 +26,45 @@
 }
 .primary-btn{
     background-color: var(--primary-color);
-    border: 0;
-    padding: 1rem 1.5rem; 
 }
+.secondary-btn{
+    background-color: var(--secondary-color);
+}
+.primary-btn, .secondary-btn{
+    border: 0;
+    padding: 1rem 2rem;
+    border-radius: 1.5rem;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    font-weight: 600;
+    font-size: 1rem;
+}
+.dark-text{
+    color: #000000;
+}
+.gradient-text{
+    background: -webkit-linear-gradient(#de4cc1, #a055e4);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+
+
 /* Navigation Bar Styles */
 nav{
     box-shadow: 0 0 20px -15px #534c64;
+    padding: 1.5rem 0;
 }
-nav .container{
+/* Sharing styles with .header-content .container */
+nav .container, .header-content .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 0;
+}
+.logo h2{
+    font-size: 2.8rem;
 }
 .logo img{
     width: 35px;
@@ -70,3 +98,33 @@ nav ul li.social-link i.fa-tiktok{
     color: #000000;
 }
 
+/* Header content styles */
+.header-content {
+    background: url(../images/Group14.png) no-repeat;
+    background-size: 50% 100%;
+}
+
+.header-content .head-text h2
+{
+    font-size: 3rem;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+.header-content .head-text h2 span{
+    font-size: 6rem;
+    font-weight: 800;
+}
+.header-content .facilities{
+    padding: 1rem 0;
+    line-height: 1.7rem;
+}
+.header-content .buttons{
+    padding: 1rem 0;
+}
+.header-content .head-text p i{
+    font-size: 0.8rem;
+}
+.header-content .head-banner img{
+    width: 75%;
+    float: right;
+}
