--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,9 +1,47 @@
 /* For Mobile Devices */
 @media (max-width: 576px) {
-
+    nav .container, .header-content .container{
+        flex-direction: column;
+        text-align: center;
+        justify-content: space-around;
+    }
+    nav .logo{
+        padding-bottom: 1rem;
+    }
+    nav ul li {
+        padding: 0.8rem 0.6rem;
+    }
+    .header-content .head-banner img {
+        width: 95%;
+        float:none;
+    }
 }
 
 /* For Tablet or Medium Devices */
 @media (max-width: 768px) { 
-
+    nav .container, .header-content .container{
+        flex-direction: column;
+        text-align: center;
+        justify-content: space-around;
+    }
+    nav .logo{
+        padding-bottom: 1rem;
+    }
+    nav ul li {
+        padding: 0.8rem 0.6rem;
+    }
+    .header-content .head-banner img {
+        width: 95%;
+        float:none;
+    }
+}
+@media (min-width: 800px) {
+    .container{
+        padding:0 1.5rem;
+    }
+}
+@media (min-width: 1200px){
+    .container{
+        padding: 0;
+    }
 }
