--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,7 +67,7 @@ nav .container, .header-content .container{
     font-size: 2.8rem;
 }
 .logo img{
-    width: 35px;
+    width: 60px;
 }
 nav ul{
     display: flex;
@@ -102,6 +102,7 @@ nav ul li.social-link i.fa-tiktok{
 .header-content {
     background: url(../images/Group14.png) no-repeat;
     background-size: 50% 100%;
+    padding: 1rem 0;
 }
 
 .header-content .head-text h2
