--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -4,6 +4,7 @@
         padding: 0;
     }
 }
+
 @media(max-width: 1199px){
     .container{
         padding: 0 1.5rem;
@@ -15,7 +16,39 @@
     .gamer-img img{
         width: 550px;
     }
+    .gamer-vantage .container .vantage{
+        gap: 6rem;
+    }
 }
+@media (max-width: 999px) {
+/* Gamer Vantage Styles */
+    .gamer-vantage .container .vantage{
+        gap: 3rem;
+        flex-direction: column-reverse;
+        text-align: center;
+        overflow: hidden;
+    }
+    .gamer-vantage .vantage-image img {
+        max-width: 75%;
+    }
+    .gamer-vantage .vantage:first-child .over-img{
+        left: -100px;
+    }
+    .gamer-vantage .vantage:last-child .over-img{
+        right: -100px;
+    }
+    .gamer-vantage .vantage .over-img img{
+        max-width: 40%;
+    }
+    .gamer-vantage .vantage.section-spacing{
+        padding-top: 1rem;
+    }
+}
+
+
+
+
+
 /* For Tablet or Medium Devices */
 @media (max-width: 768px) { 
     nav .container, .header-content .container{
@@ -45,52 +78,21 @@
     .gamer-img img{
         width: 95%;
     }
-
 /* Online Games Section */
-.online-games .game-cards{
-    grid-template-columns: repeat(2, 1fr);
-}
-
-
-
+    .online-games .game-cards{
+        grid-template-columns: repeat(2, 1fr);
+    }
 
 }
 
 /* For Mobile Devices */
-@media (max-width: 576px) {
-    nav .container, .header-content .container{
-        flex-direction: column;
-        text-align: center;
-        justify-content: space-around;
+@media (max-width: 576px){
+    /* Online Games Section */
+    .online-games .game-cards{
+        grid-template-columns: repeat(1, 1fr);
     }
-    nav .logo{
-        padding-bottom: 1rem;
+/* Gamer Vantage Styles */
+    .gamer-vantage .vantage.section-spacing{
+        padding-top: 0;
     }
-    nav ul li {
-        padding: 0.8rem 0.6rem;
-    }
-    .header-content .head-banner img {
-        width: 95%;
-        float:none;
-    }
-
-    /* Gamer Section */
-    .gamer .container{
-        flex-direction: column-reverse;
-        
-    }
-    .gamer .gamer-text{
-        text-align: center;
-        padding-left: 0;
-    }
-    .gamer-img img{
-        width: 95%;
-    }
-
-/* Online Games Section */
-.online-games .game-cards{
-    grid-template-columns: repeat(1, 1fr);
 }
-
-}
-
