added Game catagories styled it using flexbox

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -46,6 +46,21 @@
     .gamer-vantage .vantage.section-spacing{
         padding-top: 1rem;
     }
+/* Careers Section styles */
+    .careers {
+        margin-top: 0;
+    }
+    .careers .container{
+        flex-direction: column;
+        text-align: center;
+        padding-top: 2rem;
+        gap: 5px;
+    }
+    .careers .career-image img{
+        width: 95%;
+        margin-top: 1.5rem;
+    }
+
 }
 
 
@@ -89,19 +104,7 @@
     .online-games .game-cards{
         grid-template-columns: repeat(2, 1fr);
     }
-/* Careers Section styles */
-    .careers {
-        margin-top: 0;
-    }
-    .careers .container{
-        flex-direction: column;
-        text-align: center;
-        padding-top: 2rem;
-    }
-    .careers .career-image img{
-        width: 95%;
-        margin-top: 1.5rem;
-    }
+
 
 }
 
